@@ -141,4 +141,9 @@ bool makeAllDirectories(const String& path)
     return true;
 }
 
+String pathGetFileName(const String& path)
+{
+    return path.substring(path.reverseFind('/') + 1);
+}
+
 } // namespace WebCore
